--- a/Section 6. Docker Compose. Elegant Multi-Container Orhestration/goals-web-nodejs-comp/docker-compose.yaml
+++ b/Section 6. Docker Compose. Elegant Multi-Container Orhestration/goals-web-nodejs-comp/docker-compose.yaml
@@ -5,6 +5,10 @@ services:
     volumes:
       - data:/data/db # named volume, need to be
       # in the end of docker file
+    
+    # define a name of the container
+    # container_name: mongodb
+
     environment:
       - MONGO_INITDB_ROOT_USERNAME=max
       - MONGO_INITDB_ROOT_PASSWORD=secret
@@ -33,6 +37,10 @@ services:
     depends_on:
       - mongodb
 
+    # you can give a name to the image and then
+    # proceed with the build:
+    image: wanderingmono/docker-s6:goals-web-nodejs-backend-comp-v0.1
+    
     # if Dockerfile has been renamed or in the
     # different dir, or you want to use args,
     # you can use context: and agrs: be sure
@@ -44,7 +52,20 @@ services:
     #   args:
     #     some-agr: 1
 
-  # frontend:
+  frontend:
+    build: ./frontend
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./frontend/src:/app/src
+    depends_on:
+      - backend
+    image: wanderingmono/docker-s6:goals-web-nodejs-frontend-comp-v0.1
+
+    # -it in docker compose:
+    # stdin_open: true
+    # tty: true
+    
 
 volumes:
   data: # named volume
