114. Adding a PHP Container. - add php to docker-compose.yaml - change the port from 3000 to 9000 in nginx.conf because php container will listen 9000 and we have here a direct container-to-container communication, so we can't just expose port from host to php container

--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
@@ -7,7 +7,19 @@ services:
       - '8000:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  # php:
+  php:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile
+    volumes:
+      - ./src:/var/www/html:delegated
+      # :delegated - is the optimization
+      #if the container needs to write some data
+      #to the folder back to the host machine
+      #it will precces it in batches for better
+      #performance
+    ports:
+      - '3000:9000'
   # mysql:
   # composer:
   # artisan:
