115. Adding a MySQL Container. - add env folder and mysql.env file - add mysql service to the docker-compose.yaml

--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
@@ -20,7 +20,10 @@ services:
       #performance
     ports:
       - '3000:9000'
-  # mysql:
+  mysql:
+    image: mysql:5.7
+    env_file:
+      - ./env/mysql.env
   # composer:
   # artisan:
   # npm:
