--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - '8000:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+
   php:
     build:
       context: ./dockerfiles
@@ -20,10 +21,17 @@ services:
       #performance
     ports:
       - '3000:9000'
+
   mysql:
     image: mysql:5.7
     env_file:
       - ./env/mysql.env
-  # composer:
+
+  composer:
+    build:
+      context: ./dockerfiles
+      dockerfile: composer.dockerfile
+    volumes:
+      - ./src:/var/www/html
   # artisan:
   # npm:
