--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
@@ -2,11 +2,12 @@ version: "3.8"
 
 services:
   server:
-    image: 'nginx:stable-alpine'
+    image: nginx:stable-alpine
     ports:
       - '8000:80'
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   php:
     build:
@@ -23,6 +24,7 @@ services:
       - '3000:9000'
 
   mysql:
+    platform: linux/x86_64
     image: mysql:5.7
     env_file:
       - ./env/mysql.env
