122. Bind Mounts and COPY. When To Use What. - setup working, but I have a problem with artisan-database connection - didn't add COPY instructions from the last lecture - starting to rebuild the project with all the fixes from Q&A section - https://www.udemy.com/course/docker-kubernetes-the-practical-guide/learn/lecture/22167248#questions/18527114

--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/docker-compose.yaml
@@ -27,8 +27,8 @@ services:
       - '3000:9000'
 
   mysql:
-    platform: linux/x86_64
-    image: mysql:5.7
+    # platform: linux/x86_64
+    image: mysql
     env_file:
       - ./env/mysql.env
 
@@ -38,5 +38,20 @@ services:
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
-  # artisan:
-  # npm:
+  
+  artisan:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile
+    volumes:
+      - ./src:/var/www/html
+    entrypoint: ["php", "/var/www/html/artisan"]
+    # entrypoint disables RUN command in
+    # dockerfile and executes itself command
+
+  npm:
+    image: node:14
+    working_dir: /var/www/html
+    entrypoint: ["npm"]
+    volumes:
+      - ./src:/var/www/html
