--- a/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/src/.env
+++ b/Section 8. A More Complex Setup. A Laravel & PHP Dockerized Project/laravel-php-web/src/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:XdDXBuKkiBcORX2CDzIz5EIA55CDQ3NX23+k2ln9ETk=
+APP_KEY=base64:+zgs1x0ua3hpgn+UEuJS6+eU7f9VPO2iAa8lDNjncrM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
