--- a/Section 9. Deploying Docker Containers/goals-web-nodejs-dep/env/backend.env
+++ b/Section 9. Deploying Docker Containers/goals-web-nodejs-dep/env/backend.env
@@ -1,3 +1,4 @@
-MONGODB_USERNAME=max
-MONGODB_PASSWORD=secret
-MONGODB_URL=mongodb
+MONGODB_USERNAME=maximilian
+MONGODB_PASSWORD=Q97g0JZAvOZSWoKR
+MONGODB_URL=cluster0.ilhh8s7.mongodb.net
+MONGODB_NAME=goals-dev
