161. Module Resources. - complete project on AWS and locally.

--- a/Section 9. Deploying Docker Containers/goals-web-nodejs-dep/docker-compose.yaml
+++ b/Section 9. Deploying Docker Containers/goals-web-nodejs-dep/docker-compose.yaml
@@ -1,13 +1,6 @@
 version: '3.8'
 services:
-  # mongodb:
-  #   image: 'mongo'
-  #   volumes:
-  #     - data:/data/db
-  #   env_file:
-  #     - ./env/mongo.env
   backend:
-    image: wanderingmono/docker-s9:goals-web-nodejs-dep-v0.1-arm64
     build: ./backend
     ports:
       - '80:80'
@@ -16,8 +9,13 @@ services:
       - /app/node_modules
     env_file:
       - ./env/backend.env
-    # depends_on:
-    #   - mongodb
-
-# volumes:
-#   data:
+  frontend:
+    build: ./frontend
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./frontend/src:/app/src
+    stdin_open: true
+    tty: true
+    depends_on:
+      - backend
