--- a/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/deployment.yaml
+++ b/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/deployment.yaml
@@ -24,6 +24,12 @@ spec:
       containers:
         - name: second-node
           image: wanderingmono/docker-s12:kub-first-app-v2
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            periodSeconds: 10
+            initialDelaySeconds: 5
         # to create multiple containers
         # - name: ...
         #   image: ...
