--- a/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/deployment.yaml
+++ b/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/deployment.yaml
@@ -24,6 +24,8 @@ spec:
       containers:
         - name: second-node
           image: wanderingmono/docker-s12:kub-first-app-v2
+          imagePullPolicy: Always
+          # imagePullPolicy: Never
           livenessProbe:
             httpGet:
               path: /
