--- a/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/master-deployment.yaml
+++ b/Section 12. Kubernetes in Action - Diving into the Core Concepts/kub-second-app/master-deployment.yaml
@@ -10,7 +10,7 @@ spec:
       port: 80
       targetPort: 8080
       # to expose multiple ports
-    # - protocolol: 'TCP'
+    # - protocol: 'TCP'
     #   port: 443
     #   targetPort: 443
   type: LoadBalancer
